# ralph

./: .gitignore  AGENTS.md  CLAUDE.md  E2E_TESTING_FIX.md  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGGING_ENHANCEMENTS.md  MOVED_FILES.md  Makefile  PHASES.md  PRD_CONVERSION_SUMMARY.md  PRD_TOOLS.md  PROMPT_IMPROVEMENTS.md  QUICKSTART.md  README.md  WORKING_DIRECTORY_FIX.md  agent_prompt_template.md  ascii_image.py  claude-stream.py  example_reorganize_phases.py  prd-slack-agent-phase0.json  prd-slack-agent-phase0.md  prd-slack-agent.json  prd-slack-agent.md  prd-test-minimal.json  prd-test-minimal.md  prd_builder.py  prd_tools.py  prd_viewer.py  pyproject.toml  ralph.py  ralph_python_README.md  ralph_with_claude_code.py  requirements.txt  setup_api_key.sh
agent/: 2.md  3.md  DESIGN.md  DESIGN_SUMMARY.md  FULL_DESIGN.md  PRD.md
cody/: .gitignore  DESIGN.md  Makefile  PRD.md  README.md  example_claude_client.py  example_logging.py  example_orchestrator.py  pyproject.toml
cody/.cody/: config.yaml
cody/src/: claude_client.py  cli.py  config.py  log_parser.py  logging.py  messages.py  orchestrator.py  temporal.py
cody/tests/: test_claude_client.py  test_claude_client_e2e.py  test_cli.py  test_cli_e2e.py  test_config.py  test_config_e2e.py  test_log_parser.py  test_log_parser_e2e.py  test_logging.py  test_logging_e2e.py  test_messages.py  test_orchestrator.py  test_orchestrator_e2e.py  test_setup.py  test_temporal.py  test_temporal_e2e.py
cody/tests/e2e/: test_basic_chat.py  test_logging.py  test_message_window.py
ralph-package-distribution/: README.md  prd_progress.md  pyproject.toml
ralph-package-distribution/src/ralph/: __init__.py  builder.py  cli.py  commands.py  config.py  detect.py  gates.py  loop.py  prd.py  utils.py
ralph-package-distribution/tests/: test_builder.py  test_cli.py  test_cli_e2e.py  test_commands.py  test_detect.py  test_gates.py  test_git_install_e2e.py  test_package_structure.py  test_prd.py  test_readme_e2e.py  test_tools.py  test_tools_e2e.py  test_viewer.py
src/ralph/: ascii_art.py  builder.py  claude-stream.py  cli.py  commands.py  config.py  gates.py  loop.py  prd.py  tools.py  utils.py  viewer.py
tests/: __init__.py  test_builder.py  test_cli.py  test_cli_e2e.py  test_editable_install.py  test_package_metadata.py  test_package_structure.py  test_prd.py  test_readme_e2e.py  test_viewer_e2e.py
